--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
 
 <body>
     <div class="content">
-        <div class="characterLine">1234+1234+12341234</div>
+        <div class="resultContainer">
+            <div id="previous"></div>
+            <div id="current">0</div>
+        </div>
         <div class="buttonContainer">
-            <div class="button">C</div>
-            <div class="button">del</div>
+            <!-- <div class="button">C</div>
+            <div class="button">DEL</div>
             <div class="button">=</div>
             <div class="button">/</div>
             <div class="button">7</div>
@@ -29,6 +32,26 @@
             <div class="button">1</div>
             <div class="button">2</div>
             <div class="button">3</div>
+            <div class="button">+</div> -->
+            <div class="button">%</div>
+            <div class="button">CE</div>
+            <div class="button">C</div>
+            <div class="button">DEL</div>
+            <div class="button">7</div>
+            <div class="button">8</div>
+            <div class="button">9</div>
+            <div class="button">/</div>
+            <div class="button">4</div>
+            <div class="button">5</div>
+            <div class="button">6</div>
+            <div class="button">*</div>
+            <div class="button">1</div>
+            <div class="button">2</div>
+            <div class="button">3</div>
+            <div class="button">-</div>
+            <div class="button">0</div>
+            <div class="button">.</div>
+            <div class="button">=</div>
             <div class="button">+</div>
         </div>
     </div>
